--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Fruktur&display=swap");
 body {
   margin: 0;
   padding: 0;
@@ -9,6 +10,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  gap: 80px 0;
 }
 .ghost {
   position: relative;
@@ -94,4 +97,18 @@ body {
 }
 .feet span:last-child {
   border-radius: 0 0 12px 20px;
+}
+h1 {
+  font-family: "Fruktur", cursive;
+  color: #f2f2f2;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  animation: floating2 2s infinite ease-in-out;
+  font-size: 2.5em;
+  text-align: center;
+}
+@keyframes floating2 {
+  50% {
+    transform: rotateY(30deg);
+  }
 }
